card visibility bug in progress 2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -281,8 +281,7 @@ body {
   height: 100%;
   backface-visibility: hidden;
   background: rgba(0, 0, 0, 0.699);
-  border-radius: 2rem;
-  -webkit-backface-visibility: hidden; }
+  border-radius: 2rem; }
   .card__front img {
     width: 90%;
     display: block;
@@ -329,8 +328,7 @@ body {
   backface-visibility: hidden;
   background: rgba(0, 0, 0, 0.699);
   transform: rotateY(180deg);
-  border-radius: 2rem;
-  -webkit-backface-visibility: hidden; }
+  border-radius: 2rem; }
 
 .btn-position {
   position: absolute;
